--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "mocha-sinon": "^1.1.4",
     "normalize.css": "^3.0.3",
     "npm": "^3.5.0",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^15.1.0",
+    "react": "15.1.0",
+    "react-addons-test-utils": "15.1.0",
     "react-context": "0.0.3",
-    "react-dom": "^15.1.0",
+    "react-dom": "15.1.0",
     "react-hot-loader": "^1.2.5",
     "react-map-styles": "git://github.com/casesandberg/react-map-styles",
     "remarkable": "^1.6.0",
@@ -71,8 +71,8 @@
     "webpack-dev-server": "^1.8.2"
   },
   "peerDependencies": {
-    "react": "^0.14.8 || ^15.1.0",
-    "react-dom": "^0.14.8 || ^15.1.0"
+    "react": "15.1.0",
+    "react-dom": "15.1.0"
   },
   "scripts": {
     "lib": "gulp js:dist",
